--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "express": "^4.21.1",
     "moment": "^2.30.1",
     "mongoose": "^8.8.3",
+    "multer": "^1.4.5-lts.1",
     "validator": "^13.12.0"
   }
 }
